feat: add AnntationApplicationContext @Configuration feature